<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_viewnote"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDateWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/date_write"
            android:textColor="#550000"
            android:textSize="20dp"

            />

        <TextView
            android:id="@+id/tvDateDiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/date_diary"
            android:textColor="#003300"
            android:textSize="20dp"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/Title_Row_Listview"
        android:textColor="#000000"
        android:textSize="20dp"

        />

</LinearLayout>