<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/firstlogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_use"
        android:textSize="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_use"
        android:textSize="15dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:textColor="#CCCCCC"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp">
    <TextView
        android:id="@+id/tvTypePass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_pass1"
        android:textSize="15dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#CCCCCC"/>

    <EditText
        android:id="@+id/etTypePass1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginLeft="12dp"
        android:inputType="textPassword"/>
    </LinearLayout>
     <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp">
        <TextView
            android:id="@+id/tvTypePass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_pass2"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#CCCCCC"/>

        <EditText
            android:id="@+id/etTypePass2"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginLeft="12dp"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btReg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#3366CC"
        android:text="@string/reg"
        android:textColor="#FFFFFF" />
    </LinearLayout>




</LinearLayout>