<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What's on your mind?"
        android:textSize="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="170dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            >
            <TextView
                android:id="@+id/tvTypePass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_pass1"
                android:textSize="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:textColor="#770000"/>

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginLeft="12dp"
                android:inputType="textPassword"
                android:layout_toRightOf="@id/tvTypePass"/>



        <CheckBox
            android:id="@+id/cbRememberLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_login"
            android:textColor="#770000"
            android:layout_marginLeft="65dp"
            android:layout_below="@id/etLogin"/>
        </RelativeLayout>


        <Button
            android:id="@+id/btLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="#3366CC"
            android:text="@string/login"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>